Fix file name not being visible

--- a/src/components/ImageList/image-list.css
+++ b/src/components/ImageList/image-list.css
@@ -62,7 +62,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: 0.1s transform;
   user-select: none;
 
   &.mirrored {
@@ -134,6 +133,7 @@
 }
 
 .image-list-item-name {
+  z-index: 1;
   position: absolute;
   bottom: 0;
   left: 0;
